[gd_scene load_steps=11 format=3 uid="uid://bcdg4sigkkarn"]

[ext_resource type="Script" path="res://assets/HUD/HUD.gd" id="1_1pqav"]
[ext_resource type="Script" path="res://assets/HUD/CircularContainer.gd" id="2_72liu"]
[ext_resource type="Script" path="res://assets/HUD/Radar.gd" id="3_85ny1"]
[ext_resource type="Theme" uid="uid://cx33kaaj6vwje" path="res://hud.tres" id="4_26t8g"]
[ext_resource type="Texture2D" uid="uid://djvpeq1ktwq5" path="res://assets/textures/crosshair.png" id="5_jva5t"]
[ext_resource type="Script" path="res://assets/HUD/CounterMonitor.gd" id="6_jqgqd"]

[sub_resource type="Animation" id="Animation_l3o38"]
resource_name = "FadeIn"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tj00a"]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_hpqct"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ox01"]
_data = {
"FadeIn": SubResource("Animation_l3o38"),
"FadeOut": SubResource("Animation_tj00a"),
"RESET": SubResource("Animation_hpqct")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pqav")
metadata/_edit_lock_ = true

[node name="Radar" type="Container" parent="."]
layout_mode = 2
offset_right = 511.0
offset_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_72liu")
floaters_scale = 0.1

[node name="Radar_meter" type="ColorRect" parent="Radar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("3_85ny1")
actor_path = NodePath("../../..")
background = Color(0.443137, 0.647059, 1, 0.611765)
border = Color(0.439216, 0.439216, 0.439216, 0.819608)
border_resolution = 50
border_width = 7
health_color = Color(0.705882, 0.0509804, 0.0509804, 1)
shield_color = Color(0, 0.905882, 1, 1)

[node name="MessageList" type="VBoxContainer" parent="."]
layout_mode = 2
offset_top = 241.0
offset_right = 308.0
offset_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="Crosshair" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
offset_left = 624.0
offset_top = 343.0
offset_right = 656.0
offset_bottom = 375.0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_jva5t")
stretch_mode = 1

[node name="border" type="TextureRect" parent="Crosshair"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_jva5t")
expand_mode = 1
stretch_mode = 1

[node name="WeaponStatus" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -418.0
offset_top = 16.0
offset_right = -18.0
offset_bottom = 141.0
grow_horizontal = 0

[node name="WeaponName" type="Label" parent="WeaponStatus"]
layout_mode = 2
theme = ExtResource("4_26t8g")
text = "WEAPON NAME"
horizontal_alignment = 2
uppercase = true

[node name="PrimaryAmmo" type="Label" parent="WeaponStatus"]
layout_mode = 2
theme = ExtResource("4_26t8g")
text = "PRIMARY AMMO"
horizontal_alignment = 2
uppercase = true

[node name="SecondaryAmmo" type="Label" parent="WeaponStatus"]
layout_mode = 2
theme = ExtResource("4_26t8g")
text = "SECONDARY AMMO"
horizontal_alignment = 2
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 150.0
offset_right = -160.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(480, 60)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer"]
root_node = NodePath("../CenterNotification")
libraries = {
"": SubResource("AnimationLibrary_4ox01")
}

[node name="CenterNotification" type="Label" parent="CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("4_26t8g")
text = "Some text message"
horizontal_alignment = 1
uppercase = true

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CounterMonitor" type="Label" parent="Control/CenterContainer"]
layout_mode = 2
text = "0.0"
script = ExtResource("6_jqgqd")
counter_signal_name = "time_left_changed"
